# patina

./: Cargo.toml  Makefile.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: reviewer.agent.md
.github/instructions/: components.instructions.md
.github/prompts/: review.prompt.md
.github/workflows/: calculate-unsafe-code.yml  ci-workflow.yml  crate-version-update.yml  patina-qemu-pr-validation.yml  publish-mdbook.yml  publish-release.yml  rust-version-check.yml
components/patina_acpi/: Cargo.toml
components/patina_acpi/src/: acpi_protocol.rs  acpi_table.rs  integration_test.rs  lib.rs  signature.rs
components/patina_adv_logger/src/: integration_test.rs  lib.rs  memory_log.rs  protocol.rs  writer.rs
components/patina_mm/src/: config.rs  lib.rs
components/patina_mm/tests/: README.md  patina_mm_integration.rs
components/patina_performance/: Cargo.toml
components/patina_performance/src/: lib.rs  mm.rs
components/patina_performance/src/component/: performance.rs
components/patina_samples/src/: lib.rs
core/patina_internal_cpu/: Cargo.toml
docs/src/: SUMMARY.md
docs/src/dev/: documenting.md  (+3 more)
patina_dxe_core/: Cargo.toml  build.rs
patina_dxe_core/src/: allocator.rs  component_dispatcher.rs  config_tables.rs  cpu.rs  debugger_reload.rs  driver_services.rs  dxe_services.rs  events.rs  gcd.rs  lib.rs  memory_attributes_protocol.rs  misc_boot_services.rs  pecoff.rs  pi_dispatcher.rs  protocol_db.rs  protocols.rs  runtime.rs  test_support.rs  tpl_mutex.rs
sdk/patina/: Cargo.toml
supply-chain/: audits.toml  config.toml
(+147 files in other folders)
