[package]
name = "patina_performance"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"
description = "Performance measurement infrastructure."

[lints]
workspace = true

[dependencies]
r-efi = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

mu_rust_helpers = { workspace = true }
patina = { workspace = true }
patina_mm = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

[dev-dependencies]
patina = { path = "../../sdk/patina", features = ["mockall"] }
mockall = { workspace = true }
